apps/sample-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  namespace: default
spec:
  selector:
    app: sample-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
